force-app/main/default/objects/Event_Details__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <externalId>true</externalId>
    <label>Inventory Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>