force-app/main/default/objects/Event_Details__c/fields/Lead_Small_Groups__c.field-meta.xml
<CustomField>
    <fullName>Lead_Small_Groups__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Small Groups</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>