force-app/main/default/objects/Event_Details__c/fields/LiftGate__c.field-meta.xml
<CustomField>
    <fullName>LiftGate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LiftGate</label>
    <type>Checkbox</type>
</CustomField>