force-app/main/default/objects/Event_Details__c/fields/Meeting_Room_Comment__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Comment__c</fullName>
    <label>Meeting Room Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>