force-app/main/default/objects/Event_Details__c/fields/Meeting_Room_Fees__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Fees__c</fullName>
    <label>Meeting Room Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>