force-app/main/default/objects/Event_Details__c/fields/Military_Attended__c.field-meta.xml
<CustomField>
    <fullName>Military_Attended__c</fullName>
    <label>Military Attended</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>