force-app/main/default/objects/Event_Details__c/fields/Military_Emphasis__c.field-meta.xml
<CustomField>
    <fullName>Military_Emphasis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military Emphasis</label>
    <type>Checkbox</type>
</CustomField>