force-app/main/default/objects/Event_Details__c/fields/Min_PU_Fri__c.field-meta.xml
<CustomField>
    <fullName>Min_PU_Fri__c</fullName>
    <label>Min PU Fri</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>