force-app/main/default/objects/Event_Details__c/fields/Ministry_Rep__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FML</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>