force-app/main/default/objects/Event_Details__c/fields/Ministry_Rep_A__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FML A</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Details (Minstry Rep A)</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>