force-app/main/default/objects/Event_Details__c/fields/Ministry_Rep_B__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FML B</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Details (Ministry Rep B)</relationshipLabel>
    <relationshipName>Event_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>