force-app/main/default/objects/Event_Details__c/fields/MoM_Attendance__c.field-meta.xml
<CustomField>
    <fullName>MoM_Attendance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MoM Attendance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>