force-app/main/default/objects/Event_Details__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <formula>IF(Start_Date__c&lt; TODAY(), 0, (MONTH( Start_Date__c ) + (12*(YEAR(Start_Date__c )-YEAR(TODAY()))) - MONTH(TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>