force-app/main/default/objects/Event_Details__c/fields/MR_Comp_Rooms__c.field-meta.xml
<CustomField>
    <fullName>MR_Comp_Rooms__c</fullName>
    <label>MR Comp Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>