force-app/main/default/objects/Event_Details__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Guests Rooms Per Night</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>