force-app/main/default/objects/Event_Details__c/fields/Operational_Comment__c.field-meta.xml
<CustomField>
    <fullName>Operational_Comment__c</fullName>
    <label>Operational Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>