force-app/main/default/objects/Event_Details__c/fields/Operational_Fees__c.field-meta.xml
<CustomField>
    <fullName>Operational_Fees__c</fullName>
    <label>Operational Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>