force-app/main/default/objects/Event_Details__c/fields/Other_Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Session_Description__c</fullName>
    <label>Other Session Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>