force-app/main/default/objects/Event_Details__c/fields/Other_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Other_Sessions__c</fullName>
    <label>Other Sessions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>