force-app/main/default/objects/Event_Details__c/fields/Parking_Comment__c.field-meta.xml
<CustomField>
    <fullName>Parking_Comment__c</fullName>
    <label>Parking Comment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>