force-app/main/default/objects/Event_Details__c/fields/Parking_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parking_Cost__c</fullName>
    <label>Parking Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>