force-app/main/default/objects/Event_Details__c/fields/Passed_Event__c.field-meta.xml
<CustomField>
    <fullName>Passed_Event__c</fullName>
    <formula>Start_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed Event</label>
    <type>Checkbox</type>
</CustomField>