force-app/main/default/objects/Event_Details__c/fields/Pastor_Attended__c.field-meta.xml
<CustomField>
    <fullName>Pastor_Attended__c</fullName>
    <label>Pastor Attended</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>