force-app/main/default/objects/Event_Details__c/fields/Percent_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Percent_Pickup__c</fullName>
    <formula>( Total_PU__c / Total_Reserved__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Pickup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>