force-app/main/default/objects/Event_Details__c/fields/Prayer_Theme__c.field-meta.xml
<CustomField>
    <fullName>Prayer_Theme__c</fullName>
    <label>Prayer Themes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>