force-app/main/default/objects/Event_Details__c/fields/Prayers_Submitted_on_Paper__c.field-meta.xml
<CustomField>
    <fullName>Prayers_Submitted_on_Paper__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prayers Submitted on Paper</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>