force-app/main/default/objects/Event_Details__c/fields/Primary_Billing__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing__c</fullName>
    <formula>Address_1__c &amp; BR() &amp;
IF(Address_1_B__c&lt;&gt;&quot;&quot;,Address_1_B__c &amp; BR(),&quot;&quot;) &amp;
Street_1__c &amp; BR() &amp;
City_1__c &amp; &quot; &quot; &amp;   State__c  &amp; &quot;, &quot; &amp;  Zip_Code_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Billing</label>
    <type>Text</type>
</CustomField>