force-app/main/default/objects/Event_Details__c/fields/Primary_Promo_Nights__c.field-meta.xml
<CustomField>
    <fullName>Primary_Promo_Nights__c</fullName>
    <label>Primary Promo Nights</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>