force-app/main/default/objects/Event_Details__c/fields/Primary_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping__c</fullName>
    <formula>Address_2__c &amp; BR() &amp; 
IF( Address_2_B__c&lt;&gt;&quot;&quot;,Address_2_B__c &amp; BR(),&quot;&quot;)&amp; 
Street_2__c &amp; BR() &amp;
City_2__c &amp; &quot; &quot; &amp;   State_2__c  &amp; &quot;, &quot; &amp;  Zip_Code_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping</label>
    <type>Text</type>
</CustomField>