force-app/main/default/objects/Event_Details__c/fields/Recommitted_Life_Actual__c.field-meta.xml
<CustomField>
    <fullName>Recommitted_Life_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total attendees that recommitted their life to Jesus</description>
    <inlineHelpText>How many attendees recommitted their life to Jesus at this event?</inlineHelpText>
    <label>Recommitted Life Actual</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>