force-app/main/default/objects/Event_Details__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Text(Event_Area_Code__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>