force-app/main/default/objects/Event_Details__c/fields/Registration_Link_Military__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link_Military__c</fullName>
    <description>For ERT</description>
    <inlineHelpText>When the source is ERT or Migrated, this link is passed to WordPress for landing pages and has the Military Registration Link. .</inlineHelpText>
    <label>Registration Link Military</label>
    <type>Url</type>
</CustomField>