force-app/main/default/objects/Event_Details__c/fields/Registration_Price_Pastor__c.field-meta.xml
<CustomField>
    <fullName>Registration_Price_Pastor__c</fullName>
    <description>For ERT</description>
    <inlineHelpText>This is set to a Pastor price unless it is updated in ERT and ERT updates it. This can be bulk edited via a list view if the base prices change, or individually if a specific event has a different value.</inlineHelpText>
    <label>Registration Price Pastor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>