force-app/main/default/objects/Event_Details__c/fields/Reservation_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Cutoff_Date__c</fullName>
    <label>Reservation Cutoff Date</label>
    <type>Date</type>
</CustomField>