force-app/main/default/objects/Event_Details__c/fields/Reservation_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Phone__c</fullName>
    <label>Reservation Phone</label>
    <type>Phone</type>
</CustomField>