force-app/main/default/objects/Event_Details__c/fields/Reservation_Url__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Url__c</fullName>
    <label>Reservation Url</label>
    <type>Url</type>
</CustomField>