force-app/main/default/objects/Event_Details__c/fields/Reservations__c.field-meta.xml
<CustomField>
    <fullName>Reservations__c</fullName>
    <formula>IF(Reservation_Url__c=&quot;&quot;,&quot;&quot;,Hyperlink( Reservation_Url__c , &quot;Reservations&quot;,&quot;Reservations&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservations</label>
    <type>Text</type>
</CustomField>