force-app/main/default/objects/Event_Details__c/fields/Resort_Fee__c.field-meta.xml
<CustomField>
    <fullName>Resort_Fee__c</fullName>
    <label>Resort Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>