force-app/main/default/objects/Event_Details__c/fields/Resource_Center__c.field-meta.xml
<CustomField>
    <fullName>Resource_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Center</label>
    <type>Checkbox</type>
</CustomField>