force-app/main/default/objects/Event_Details__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Tax</label>
    <type>Checkbox</type>
</CustomField>