force-app/main/default/objects/Event_Details__c/fields/Salvation_Decisions__c.field-meta.xml
<CustomField>
    <fullName>Salvation_Decisions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Salvation Decisions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>