force-app/main/default/objects/Event_Details__c/fields/Seats_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Seats_Allocated__c</fullName>
    <label>Seats Allocated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>