force-app/main/default/objects/Event_Details__c/fields/Sell_To__c.field-meta.xml
<CustomField>
    <fullName>Sell_To__c</fullName>
    <inlineHelpText>When an event nears capacity, the Sell to can be changed in Cvent and it will be updated by the Cvent Integration, or ERT in the future.</inlineHelpText>
    <label>Sell To</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>