force-app/main/default/objects/Event_Details__c/fields/Shipping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Comments__c</fullName>
    <label>Shipping Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>