force-app/main/default/objects/Event_Details__c/fields/Shipping_List_Due__c.field-meta.xml
<CustomField>
    <fullName>Shipping_List_Due__c</fullName>
    <label>Shipping List Due</label>
    <type>Date</type>
</CustomField>