force-app/main/default/objects/Event_Details__c/fields/Shuttle__c.field-meta.xml
<CustomField>
    <fullName>Shuttle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shuttle</label>
    <type>Checkbox</type>
</CustomField>