force-app/main/default/objects/Event_Details__c/fields/Site_Selection__c.field-meta.xml
<CustomField>
    <fullName>Site_Selection__c</fullName>
    <label>Site Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>