force-app/main/default/objects/Event_Details__c/fields/Site_Selection_Firm__c.field-meta.xml
<CustomField>
    <fullName>Site_Selection_Firm__c</fullName>
    <defaultValue>&quot;FamilyLife&quot;</defaultValue>
    <label>Site Selection Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FamilyLife</fullName>
                <default>true</default>
                <label>FamilyLife</label>
            </value>
            <value>
                <fullName>HelmsBrisco</fullName>
            </value>
            <value>
                <fullName>Arrowhead</fullName>
            </value>
            <value>
                <fullName>Innovative Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>