force-app/main/default/objects/Event_Details__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>For ERT</description>
    <inlineHelpText>This should be set to the Active Registration System. Cvent or ERT. Note during the migration period you may see Migrated here.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>ERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>