force-app/main/default/objects/Event_Details__c/fields/Speaker_Recs_Date__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Recs_Date__c</fullName>
    <label>Speaker Recs Date</label>
    <type>Date</type>
</CustomField>