force-app/main/default/objects/Event_Details__c/fields/Sr_Planner__c.field-meta.xml
<CustomField>
    <fullName>Sr_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sr Planner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Details (Sr Planner)</relationshipLabel>
    <relationshipName>Event_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>