force-app/main/default/objects/Event_Details__c/fields/Sr_Planner_Email__c.field-meta.xml
<CustomField>
    <fullName>Sr_Planner_Email__c</fullName>
    <formula>Sr_Planner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sr Planner Email</label>
    <type>Text</type>
</CustomField>