force-app/main/default/objects/Event_Details__c/fields/Sr_Planner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sr_Planner_Phone__c</fullName>
    <formula>Sr_Planner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sr Planner Phone</label>
    <type>Text</type>
</CustomField>