force-app/main/default/objects/Event_Details__c/fields/Staff_Convos__c.field-meta.xml
<CustomField>
    <fullName>Staff_Convos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Staff Convos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>