force-app/main/default/objects/Event_Details__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Status of the Current Event.. Note this must be in Planning for it to publish in WordPress. Changing it to any other value will prevent it from publishing.</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Event Canceled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Staffed</fullName>
                <isActive>false</isActive>
                <label>Staffed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>