force-app/main/default/objects/Event_Details__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Event start date</description>
    <inlineHelpText>What day does this event begin?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>