force-app/main/default/objects/Event_Details__c/fields/State_3__c.field-meta.xml
<CustomField>
    <fullName>State_3__c</fullName>
    <label>State 3</label>
    <length>2</length>
    <type>Text</type>
</CustomField>