force-app/main/default/objects/Event_Details__c/fields/State_4__c.field-meta.xml
<CustomField>
    <fullName>State_4__c</fullName>
    <description>Part of address 4 which will be populated as address Aux 2 when the Conference Location and Hotel Location are different. System field not exposed on a page layout. Values are set in Event Detail Main Process</description>
    <label>State 4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>