force-app/main/default/objects/Event_Details__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Part of address 1 which will be populated as address Primary Shipping when the Conference Location and Hotel Location are different. System field not exposed on a page layout. Values are set in Event Detail Main Process</description>
    <label>State 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>