force-app/main/default/objects/Event_Details__c/fields/Store_Product_Closed__c.field-meta.xml
<CustomField>
    <fullName>Store_Product_Closed__c</fullName>
    <label>Store Product Closed</label>
    <type>Date</type>
</CustomField>