force-app/main/default/objects/Event_Details__c/fields/Store_Product_Requested__c.field-meta.xml
<CustomField>
    <fullName>Store_Product_Requested__c</fullName>
    <label>Store Product Requested</label>
    <type>Date</type>
</CustomField>