force-app/main/default/objects/Event_Details__c/fields/Street_3__c.field-meta.xml
<CustomField>
    <fullName>Street_3__c</fullName>
    <label>Street 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>