force-app/main/default/objects/Event_Details__c/fields/Stretch_Goal__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Goal__c</fullName>
    <label>Stretch Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>