force-app/main/default/objects/Event_Details__c/fields/Surveys_Open__c.field-meta.xml
<CustomField>
    <fullName>Surveys_Open__c</fullName>
    <description>ERT UAT</description>
    <formula>AND(
    TODAY() &gt;= Start_Date__c,
    TODAY() &lt;= End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vital piece of information for Check in and Surveys. This is set to True when Today is greater than or equal to start date AND less than or equal to end date.</inlineHelpText>
    <label>Surveys Open</label>
    <type>Checkbox</type>
</CustomField>