force-app/main/default/objects/Event_Details__c/fields/Total_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Total_Alumni__c</fullName>
    <label>Total Alumni</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>