force-app/main/default/objects/Event_Details__c/fields/Total_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Total_Canceled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Canceled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>