force-app/main/default/objects/Event_Details__c/fields/Total_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Show__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No-Show</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>