force-app/main/default/objects/Event_Details__c/fields/Total_PU__c.field-meta.xml
<CustomField>
    <fullName>Total_PU__c</fullName>
    <label>Total PU</label>
    <summarizedField>Event_Room__c.Total_PU__c</summarizedField>
    <summaryForeignKey>Event_Room__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>