force-app/main/default/objects/Event_Details__c/fields/Total_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserved__c</fullName>
    <label>Total Reserved</label>
    <summarizedField>Event_Room__c.Reserved__c</summarizedField>
    <summaryForeignKey>Event_Room__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>