force-app/main/default/objects/Event_Details__c/fields/Total_Singles__c.field-meta.xml
<CustomField>
    <fullName>Total_Singles__c</fullName>
    <label>Total Singles</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>