force-app/main/default/objects/Event_Details__c/fields/UFF__c.field-meta.xml
<CustomField>
    <fullName>UFF__c</fullName>
    <formula>Start_Date__c -  Conference_Location__r.Shipping_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unused Formula Field</label>
    <type>Date</type>
</CustomField>