force-app/main/default/objects/Event_Details__c/fields/Unique_Responses__c.field-meta.xml
<CustomField>
    <fullName>Unique_Responses__c</fullName>
    <label>Unique Responses</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>