force-app/main/default/objects/Event_Details__c/fields/Unique_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Row_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Row ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>