force-app/main/default/objects/Event_Details__c/fields/Valet_Parking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Valet_Parking_Rate__c</fullName>
    <label>Valet Parking Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>