force-app/main/default/objects/Event_Details__c/fields/Venue_Staff_Types__c.field-meta.xml
<CustomField>
    <fullName>Venue_Staff_Types__c</fullName>
    <label>Venue Staff Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Rooms Manager</fullName>
            </value>
            <value>
                <fullName>Event Dock Foreman</fullName>
            </value>
            <value>
                <fullName>Event Concierge</fullName>
            </value>
            <value>
                <fullName>Event Audio Video Mgr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>