force-app/main/default/objects/Event_Details__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <formula>IF(Start_Date__c&lt; TODAY(), 0, ROUND((Start_Date__c-Today())/7,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>