force-app/main/default/objects/Event_Details__c/fields/Worker_Recs_Date__c.field-meta.xml
<CustomField>
    <fullName>Worker_Recs_Date__c</fullName>
    <label>Worker Recs Date</label>
    <type>Date</type>
</CustomField>