force-app/main/default/objects/Event_Details__c/fields/WP_CL_Geo__c.field-meta.xml
<CustomField>
    <fullName>WP_CL_Geo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo Code</label>
    <type>Checkbox</type>
</CustomField>