force-app/main/default/objects/Event_Details__c/fields/WP_CL_Links__c.field-meta.xml
<CustomField>
    <fullName>WP_CL_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links</label>
    <type>Checkbox</type>
</CustomField>