force-app/main/default/objects/Event_Details__c/fields/WTR_Director_2__c.field-meta.xml
<CustomField>
    <fullName>WTR_Director_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Details (WTR Director 2)</relationshipLabel>
    <relationshipName>WTR_Director_2</relationshipName>
    <type>Lookup</type>
</CustomField>